--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,10 @@ before_install:
   - ./miniconda.sh -b
   - export PATH=/home/travis/miniconda3/bin:$PATH
 install:
-  - conda create --yes -n test-env -c qiime2 python=$PYTHON_VERSION qiime nose flake8
+  - conda create --yes -n test-env python=$PYTHON_VERSION numpy nose flake8
   - source activate test-env
-  - conda install -c r r
-  - conda install -c bioconda bioconductor-dada2
+  - conda install --yes -c r -c bioconda bioconductor-dada2
+  - pip install https://github.com/qiime2/qiime2/archive/master.zip https://github.com/qiime2/q2-types/archive/master.zip
   - pip install .
 script:
   - nosetests
