--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ before_install:
 install:
   - conda create --yes -n test-env python=$PYTHON_VERSION numpy nose
   - source activate test-env
-  - conda install --yes -c r -c bioconda bioconductor-dada2
+  - conda install --yes --override-channels -c r -c defaults r 'r-base=3.3.1 1'
+  - CDPATH= R -e 'source("https://bioconductor.org/biocLite.R"); biocLite("dada2")'
   - pip install https://github.com/qiime2/qiime2/archive/master.zip https://github.com/qiime2/q2-types/archive/master.zip
   - pip install flake8
   - pip install .
