--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
-sudo: required
+sudo: false
+compiler:
+  - gcc
 addons:
   apt:
     packages:
-    - gcc-5
-    - g++-5
+     - gcc-4.8
+     - g++-4.8
 language: python
 env:
   - PYTHON_VERSION=3.5
@@ -13,7 +15,7 @@ before_install:
   - ./miniconda.sh -b
   - export PATH=/home/travis/miniconda3/bin:$PATH
 install:
-  - sudo unlink /usr/bin/gcc && sudo ln -s /usr/bin/gcc-5 /usr/bin/gcc
+  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
   - conda create --yes -n test-env python=$PYTHON_VERSION numpy nose
   - source activate test-env
   - conda install --yes --override-channels -c r -c defaults r 'r-base=3.3.1 1'
