--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,15 @@ sudo: false
 compiler:
   - gcc
 addons:
-  sources:
-    - ubuntu-toolchain-r-test
   apt:
+    sources:
+      - ubuntu-toolchain-r-test
     packages:
-     - gcc-5
-     - g++-5
+      - libyajl-dev
+      - libxml2-dev
+      - gcc-4.8
+      - g++-4.8
+      - clang
 language: python
 env:
   - PYTHON_VERSION=3.5
