--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,5 @@
 sudo: false
-compiler:
-  - gcc
-addons:
-  apt:
-    sources:
-      - ubuntu-toolchain-r-test
-    packages:
-      - libyajl-dev
-      - libxml2-dev
-      - gcc-4.8
-      - g++-4.8
-      - clang
+dist: xenial
 language: python
 env:
   - PYTHON_VERSION=3.5
@@ -20,7 +9,6 @@ before_install:
   - ./miniconda.sh -b
   - export PATH=/home/travis/miniconda3/bin:$PATH
 install:
-  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
   - conda create --yes -n test-env python=$PYTHON_VERSION numpy nose
   - source activate test-env
   - conda install --yes --override-channels -c r -c defaults r 'r-base=3.3.1 1'
