--- a/ci/recipe/meta.yaml
+++ b/ci/recipe/meta.yaml
@@ -17,7 +17,7 @@ requirements:
     - biom-format >=2.1.5,<2.2.0
     - qiime2 2017.3.*
     - q2-types 2017.3.*
-    - bioconductor-dada2
+    - bioconductor-dada2 1.2
 
   run:
     - python 3.5*
@@ -25,7 +25,7 @@ requirements:
     - biom-format >=2.1.5,<2.2.0
     - qiime2 2017.3.*
     - q2-types 2017.3.*
-    - bioconductor-dada2
+    - bioconductor-dada2 1.2
 
 test:
   imports:
