--- a/ci/recipe/meta.yaml
+++ b/ci/recipe/meta.yaml
@@ -21,11 +21,7 @@ requirements:
     - python 3.5*
     - setuptools
     - biom-format >=2.1.5,<2.2.0
-    # This pin only exists because namespaces where shuffled around and the
-    # next bioconductor version was uploaded only on OS X and only for
-    # biostrings at the moment.
-    - bioconductor-biostrings 2.48.0
-    - bioconductor-dada2 1.6.0 r3.4.1_0
+    - bioconductor-dada2 1.8.0
     # openjdk is not a real dependency, but, r-base has a post-link and post-
     # activation hook that calls R CMD javareconf, which pokes around for any
     # installations of java. On modern versions of macOS, a binary called
