MAINT: Updating GitHub templates

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,3 +52,4 @@ jobs:
         package-name: q2-dada2
         build-target: staging
         additional-tests: py.test --pyargs q2_dada2
+        library-token: ${{ secrets.LIBRARY_TOKEN }}
