--- a/ci/recipe/meta.yaml
+++ b/ci/recipe/meta.yaml
@@ -21,6 +21,10 @@ requirements:
     - python {{ python }}
     - biom-format >=2.1.5,<2.2a0
     - bioconductor-dada2 1.18.0
+    # the following pin is due to recent issues with versions of r-matrix
+    # past 1.3-2:
+    # https://github.com/benjjneb/dada2/issues/212#issuecomment-836757295
+    - r-matrix 1.3-2
     # openjdk is not a real dependency, but, r-base has a post-link and post-
     # activation hook that calls R CMD javareconf, which pokes around for any
     # installations of java. On modern versions of macOS, a binary called
