Revert "hack: disable tests to flush ci system"
This reverts commit e2fc5bc7c0adc1128647a2e5c70c3bf983319b17.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,6 +51,5 @@ jobs:
       with:
         package-name: q2-dada2
         build-target: tested
-        # TODO: revert
-        # additional-tests: py.test --pyargs q2_dada2
+        additional-tests: py.test --pyargs q2_dada2
         library-token: ${{ secrets.LIBRARY_TOKEN }}
