--- a/ci/recipe/meta.yaml
+++ b/ci/recipe/meta.yaml
@@ -20,6 +20,7 @@ requirements:
     - python {{ python }}
     - biom-format >=2.1.5,<2.2a0
     - bioconductor-dada2 1.22.0
+    - bioconda::r-optparse 1.3.0
     # openjdk is not a real dependency, but, r-base has a post-link and post-
     # activation hook that calls R CMD javareconf, which pokes around for any
     # installations of java. On modern versions of macOS, a binary called
@@ -30,7 +31,6 @@ requirements:
     - openjdk # [osx]
     - qiime2 {{ qiime2_epoch }}.*
     - q2-types {{ qiime2_epoch }}.*
-    - r-optparse 1.3.0
 
 test:
   requires:
