--- a/ci/recipe/meta.yaml
+++ b/ci/recipe/meta.yaml
@@ -20,6 +20,7 @@ requirements:
     - python {{ python }}
     - biom-format {{ biom_format }}
     - bioconductor-dada2 1.22.0
+    - r-base >=4.2.0
     - r-optparse >=1.7.1
     # openjdk is not a real dependency, but, r-base has a post-link and post-
     # activation hook that calls R CMD javareconf, which pokes around for any
