--- a/ci/recipe/meta.yaml
+++ b/ci/recipe/meta.yaml
@@ -22,6 +22,7 @@ requirements:
     - bioconductor-dada2
     - r-base {{ r_base }}
     - r-optparse >=1.7.1
+    - matplotlib >=3.8.4
     # openjdk is not a real dependency, but, r-base has a post-link and post-
     # activation hook that calls R CMD javareconf, which pokes around for any
     # installations of java. On modern versions of macOS, a binary called
