--- a/ci/recipe/meta.yaml
+++ b/ci/recipe/meta.yaml
@@ -34,6 +34,7 @@ requirements:
     - openjdk # [osx]
     - qiime2 {{ qiime2_epoch }}.*
     - q2-types {{ qiime2_epoch }}.*
+    - q2-templates {{ qiime2_epoch }}.*
 
 test:
   requires:
